; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_vout.c_vlc_player_vout_AddListener.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_vout.c_vlc_player_vout_AddListener.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i8*, %struct.vlc_player_vout_cbs* }
%struct.TYPE_7__ = type { i32, i32 }
%struct.vlc_player_vout_cbs = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @vlc_player_vout_AddListener(%struct.TYPE_7__* %0, %struct.vlc_player_vout_cbs* %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.vlc_player_vout_cbs*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store %struct.vlc_player_vout_cbs* %1, %struct.vlc_player_vout_cbs** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load %struct.vlc_player_vout_cbs*, %struct.vlc_player_vout_cbs** %6, align 8
  %10 = call i32 @assert(%struct.vlc_player_vout_cbs* %9)
  %11 = call %struct.TYPE_6__* @malloc(i32 24)
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %8, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %13 = icmp ne %struct.TYPE_6__* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %4, align 8
  br label %34

15:                                               ; preds = %3
  %16 = load %struct.vlc_player_vout_cbs*, %struct.vlc_player_vout_cbs** %6, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 2
  store %struct.vlc_player_vout_cbs* %16, %struct.vlc_player_vout_cbs** %18, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 1
  store i8* %19, i8** %21, align 8
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = call i32 @vlc_mutex_lock(i32* %23)
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 1
  %29 = call i32 @vlc_list_append(i32* %26, i32* %28)
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 0
  %32 = call i32 @vlc_mutex_unlock(i32* %31)
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  store %struct.TYPE_6__* %33, %struct.TYPE_6__** %4, align 8
  br label %34

34:                                               ; preds = %15, %14
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  ret %struct.TYPE_6__* %35
}

declare dso_local i32 @assert(%struct.vlc_player_vout_cbs*) #1

declare dso_local %struct.TYPE_6__* @malloc(i32) #1

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @vlc_list_append(i32*, i32*) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
